--- a/views/index.html
+++ b/views/index.html
@@ -69,7 +69,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <!-- EDIT ME -->
-                        <h1 class="brand-heading">Barbara Streisand</h1>
+                        <h1 class="brand-heading">Valeria Yermakova</h1>
                         <!-- EDIT ME -->
                         <p class="intro-text">This is my portfolio, and stuff. Here's another sentence about me. I also have a website. You are currently looking at it.</p>
                         <div class="page-scroll">
