--- a/views/index.html
+++ b/views/index.html
@@ -71,7 +71,7 @@
                         <!-- EDIT ME -->
                         <h1 class="brand-heading">Valeria Yermakova</h1>
                         <!-- EDIT ME -->
-                        <p class="intro-text">This is my portfolio, and stuff. Here's another sentence about me. I also have a website. You are currently looking at it.</p>
+                        <p class="intro-text">42</p>
                         <div class="page-scroll">
                             <a href="#about" class="btn btn-circle">
                                 <i class="fa fa-angle-double-down animated"></i>
@@ -88,8 +88,8 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <!-- EDIT ME -->
                 <h2>About Me</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis lectus est, pulvinar eu risus ut, porttitor ullamcorper mi. Aenean non quam arcu. Fusce feugiat velit vel lectus convallis elementum.</p>
-                <p>Pellentesque venenatis, dui nec auctor porta, felis sapien hendrerit quam, non rutrum arcu quam et leo. Pellentesque suscipit, justo nec convallis gravida, odio tortor imperdiet dui, in congue nibh nisl non purus. Integer nec tincidunt nisi. Nunc rhoncus eleifend nisi ut ornare.</p>
+                <p>dinosaurs eat pineapples</p>
+                <p>woodchucks can't chuck wood?</p>
             </div>
         </div>
     </section>
@@ -100,7 +100,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <!-- EDIT ME -->
                     <h2>My Work</h2>
-                    <p>Donec varius nulla leo. Quisque sollicitudin nunc eget magna dignissim, in consectetur massa scelerisque. Nunc rhoncus eros vitae nisl porttitor, ac vestibulum tellus blandit. Etiam blandit mauris eu imperdiet consectetur. Nulla at nisi cursus, dictum quam eget, fringilla lorem. Suspendisse mollis molestie lorem, id pharetra nunc consectetur eu. Praesent volutpat enim eu nisi ultrices mattis.</p>
+                    <p>work twerk?</p>
                     <a href="http://www.youtube.com/watch?v=J1mGWhLwu64" class="btn btn-default btn-lg">View My Work</a>
                 </div>
             </div>
@@ -112,7 +112,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <!-- EDIT ME -->
                 <h2>Contact Me</h2>
-                <p>Feel free to email me to provide some feedback on my work, give me suggestions for new songs (preferably with autotune), or to just say hello!</p>
+                <p>I have no friends, please email me!</p>
                 <p>barbar@streisand.com</p>
                 <ul class="list-inline banner-social-buttons">
                     <!-- EDIT ME -->
