--- a/views/index.html
+++ b/views/index.html
@@ -113,7 +113,7 @@
                 <!-- EDIT ME -->
                 <h2>Contact Me</h2>
                 <p>I have no friends, please email me!</p>
-                <p>barbar@streisand.com</p>
+                <p>yermakova.valeria@gmail.com</p>
                 <ul class="list-inline banner-social-buttons">
                     <!-- EDIT ME -->
                     <li><a href="https://twitter.com/BarbraStreisand" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
