--- a/views/stuff.html
+++ b/views/stuff.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <center><h1>Super Sayan Worthy CS Skills</h1></center>
+    <center><h1>Super Saiyan Worthy CS Skills</h1></center>
 
     <!-- This draws a line across the page! -->
     <hr/>
