--- a/views/stuff.html
+++ b/views/stuff.html
@@ -51,7 +51,7 @@
       <button id="greetme">Say hi to me, I have no friends!</button>
     </div>
 
-    <a href="/">Back</a>
+    <a href="/">Return to Home Page</a>
 
     <!-- Now load all the javascript code -->
     <script src="/static/js/jquery-1.10.2.js" type="text/javascript"></script>
