imgrr stuff again

--- a/views/imgrr.html
+++ b/views/imgrr.html
@@ -59,7 +59,7 @@
   
 
 
----
+
 
 
  <div class="problem">
@@ -79,13 +79,13 @@
   <div class="problem">
       <h2 class="problem_title">Swap Em</h2>
       <p>Write code so that when you click the button below, the image changes
-      to the one you wrote in the box (ex. type giraffe.jpg into the box).</p>
+      to the one you wrote in the box (ex. type giraffe into the box).</p>
       <input type="text" id="new2img_file">
       <button id="change2_img">Change pics</button>
     </div>
    
 
------
+
 
       </div>
 
