--- a/views/imgrr.html
+++ b/views/imgrr.html
@@ -69,11 +69,10 @@
 
  <div class="problem">
       <h2 class="problem_title">See more pictures!</h2>
-      <img class="clickable2" src="/static/img/IMG_1348.jpg" width="100px" height="100px">
-      <img class="clickable2" src="/static/img/IMG_1377.jpg" width="100px" height="100px">
-      <img class="clickable2" src="/static/img/IMG_1398.jpg" width="100px" height="100px">
+      <img class="clickable2" src="/static/img/IMG_1348.JPG" width="100px" height="100px">
+      <img class="clickable2" src="/static/img/IMG_1377.JPG" width="100px" height="100px">
+      <img class="clickable2" src="/static/img/IMG_1398.JPG" width="100px" height="100px">
     </div>  
-
 
 
  
