new updat migrr

--- a/views/imgrr.html
+++ b/views/imgrr.html
@@ -64,7 +64,7 @@
 
  <div class="problem">
       <h2 class="problem_title">Pictures from Vietnam</h2>
-      <img id="main2_img" src="/static/img/IMG_1348.jpg" height="700px">
+      <img id="main2_img" src="/static/img/IMG_1348.JPG" height="700px">
     </div>
 
  <div class="problem">
