more done imgrr

--- a/views/imgrr.html
+++ b/views/imgrr.html
@@ -18,11 +18,7 @@
 
     <div class="problem">
       <h2 class="problem_title">Peekaboo</h2>
-      <p>Write some code in imgrr.js so that when you click the button
-      below, the image above disappears and the text of the
-      button changes to "Come Back!". Then, if you click the button again
-      make it so the image reappears and the button text changes back
-      to "Go Away!".</p>
+      <p>The baby gorilla can do a magic trick, just press 'Go Away!'</p>
       <button id="toggle_img">Go Away!</button>
 
     </div>
@@ -31,8 +27,7 @@
 
     <div class="problem">
       <h2 class="problem_title">Swap Em</h2>
-      <p>Write code so that when you click the button below, the image changes
-      to the one you wrote in the box (ex. type giraffe into the box).</p>
+      <p>Type in 'giraffe' 'red_panda' or 'gorilla' in the text box for some magic!</p>
       <input type="text" id="new_img_file">
       <button id="change_img">Swap It In</button>
     </div>
@@ -41,9 +36,7 @@
 
     <div class="problem">
       <h2 class="problem_title">Find the Source</h2>
-      <p>Edit the html to make the three thumbnails below a gorilla, a giraffe
-      and a red panda. Then write code so that when you click any of the images,
-      an alert pops up displaying the src of the image you clicked.</p>
+      <p>Click on an impage for it's source</p>
       <img class="clickable" src="/static/img/gorilla.jpg" width="100px" height="100px">
       <img class="clickable" src="/static/img/giraffe.jpg" width="100px" height="100px">
       <img class="clickable" src="/static/img/red_panda.jpg" width="100px" height="100px">
@@ -53,10 +46,7 @@
 
     <div class="problem2">
       <h2 class="problem_title2">Imgrr</h2>
-      <p>In the space below, make a large main image and three smaller
-      thumbnails below it. Then make it so that when you click a thumbnail it
-      shows up as the large image. Use the previous parts to guide you!</p>
-  
+     
 
 
  
@@ -68,19 +58,6 @@
       <img class="clickable2" src="/static/img/IMG_1377.JPG" width="100px" height="100px">
       <img class="clickable2" src="/static/img/IMG_1398.JPG" width="100px" height="100px">
     
-<script>
-  $(document).ready(function(){
-      $("img"). click(function(e) {
-        var newclass = $(this).attr("id");
-        var oldclass = $('#main2_img').attr('class');
-        $('#main2_img').fadeOut(function() {
-          $('#main2_img').removeClass(oldclass).addClass(newclass).fadeIn('slow');
-        })
-      })
-
-        });
-  </script>
-
 
 
 
