--- a/views/chain_reaction.html
+++ b/views/chain_reaction.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Chain Reaction!</title>
+    <title>The Mininalist Aquarium</title>
     <style>
       body {
         text-align: center;
@@ -11,7 +11,7 @@
     </style>
   </head>
   <body>
-    <h1>Chain Reaction</h1>
+    <h1>The Mininalist Fish(square)bowl</h1>
     <canvas id="game_canvas" width="800px" height="600px"></canvas>
     <script src="/static/js/jquery-1.10.2.js"></script>
     <script src="/static/js/chain_reaction.js"></script>
