yay my random facs are changing. HOLY SHIT

--- a/views/fact.html
+++ b/views/fact.html
@@ -9,9 +9,9 @@
     <br>
     <br>
     <center>
-      <h1>Hello, <%= your_name %></h1>
-      <h2>RANDOM FACTOID TO INCREASE YOUR LIFE EXPECTANCY:</h1>
-      <h3>"A man a plan a canal panama" is a palindrome.</h3>
+   
+      <h1>RANDOM FACTOID TO INCREASE YOUR LIFE EXPECTANCY:</h1>
+        <h3><%= randomfact %></h3>
 
       <br>
       <br>
